# xiz-rcz

./: CMakeLists.txt  Doxyfile.in  accessibility_checker.cc  accessibility_checker.h  byteslist_istream.cc  byteslist_istream.h  conf_handler.cc  conf_handler.h  config_serial_interface_handler.cc  config_serial_interface_handler.h  copy_file_request.cc  copy_file_request.h  copy_file_result.h  copy_queue_entry.h  core_function_call.cc  core_function_call.h  core_function_data_free.cc  core_function_data_free.h  core_function_data_in.cc  core_function_data_in.h  core_function_data_out.cc  core_function_data_out.h  core_function_data_sync.cc  core_function_data_sync.h  core_function_del_file.cc  core_function_del_file.h  core_function_exit.cc  core_function_exit.h  core_function_get_conf.cc  core_function_get_conf.h  core_function_get_file.cc  core_function_get_file.h  core_function_get_files_list.cc  core_function_get_files_list.h  core_function_get_measurement.cc  core_function_get_measurement.h  core_function_get_measurements_list.cc  core_function_get_measurements_list.h  core_function_log.cc  core_function_log.h  (+261 more)
debian/: changelog  control  copyright  install  libzix.default  libzix.init  postinst  rules
perl/: check_datain_signature.pl  libzix_demo.pl  sign_request.pl  test_socket_interface.pl  zix.pl
perl/LibZIX/: SocketClient.pm
perl/bmp2jpg/: bmp2jpg.pl
perl/demo_processors/: JOIA_ip.pl  iComMobile_da.pl  serialAcknowledge.pl  xml2pdf.pl
perl/xml2pdf/: xml2pdf.pl
responsexmls/: del4.xml  df2.xml  di1.xml  di2.xml  di5.xml  ds2.xml  ds6.xml  ds7.xml  f5.xml  get3.xml  get4.xml  get_env_all.xml  get_env_given.xml  get_env_named.xml  get_env_zix.xml  gml4.xml  list2.xml  list3.xml  list4.xml  list5.xml  list6.xml  set3.xml  set6.xml  set_env_erroneous_2.xml  wrapdc_sml1.xml  wrapdc_sml2.xml  wrapdc_sml3.xml
testxmls/: data_out.xml  data_out_log_usb.xml  data_out_no_scheme.xml  data_out_no_scheme_2.xml  data_out_no_signature.xml  data_out_scheme.xml  data_out_scheme_pe.xml  data_sync_id.xml  del1.xml  del2.xml  del3.xml  del4.xml  del5.xml  df1.xml  df2.xml  df3.xml  df4.xml  di1.xml  di2.xml  di3.xml  di4.xml  di5.xml  di6.xml  do1.xml  do10.xml  do2.xml  do3.xml  do5.xml  do6.xml  do7.xml  do8.xml  do9.xml  ds1.xml  ds10.xml  ds11.xml  ds12.xml  ds13.xml  ds2.xml  ds3.xml  ds4.xml  (+108 more)
visux_daemon/: CMakeLists.txt  controller.cc  daemon.cc
